# llm-benchmark

./: .gitignore  AGENTS.md  BACKLOG.md  CONTRIBUTING.md  README.md  config.yaml  puzzle.py  pyproject.toml  requirements.txt  run.py  setup.ps1  setup.sh
benchmark/: agent_loop.py  arena.py  auditor.py  cli.py  compare.py  console.py  datasets.py  evaluation.py  loader.py  repo_patch.py  reporter.py  responses_api.py  result.py  runner.py  scorer.py  session.py  utils.py
benchmark/backends/: __init__.py  base.py  generic_openai.py  ktransformers.py  llamacpp.py  lm_studio.py  ollama.py  sglang.py  tensorrt.py  tgi.py  vllm.py
configs/: openrouter-frontier-agent-loop.yaml
docs/superpowers/plans/: 2026-06-17-agent-loop-benchmark.md
tasks/: README.md  agent_loop.yaml  agentic.yaml  coding.yaml  instruction_following.yaml  knowledge.yaml  math.yaml  reasoning.yaml  repo_patch.yaml  summarization.yaml  vision.yaml  writing.yaml
tasks/fixtures/agent_loop/csv_import_reconciliation/importer/: models.py  parser.py  summary.py
tasks/fixtures/agent_loop/csv_import_reconciliation/tests/: test_importer.py
tasks/fixtures/agent_loop/deploy_dependency_planner/deployer/: parser.py  planner.py
tasks/fixtures/agent_loop/deploy_dependency_planner/tests/: test_planner.py
tasks/fixtures/agent_loop/mean_tool_loop/calc/: stats.py
tasks/fixtures/agent_loop/mean_tool_loop/tests/: test_stats.py
tasks/fixtures/agent_loop/ttl_cache_invalidation/catalog/: cache.py  clock.py  service.py
tasks/fixtures/agent_loop/ttl_cache_invalidation/tests/: test_cache.py
tasks/fixtures/repo_patch/config_flags/settings_app/: config.py
tasks/fixtures/repo_patch/config_flags/tests/: test_config.py
tasks/fixtures/repo_patch/ledger_amounts/ledger/: amounts.py
tasks/fixtures/repo_patch/ledger_amounts/tests/: test_amounts.py
tasks/fixtures/repo_patch/todo_priority/tests/: test_todos.py
tasks/fixtures/repo_patch/todo_priority/todo_app/: filters.py  models.py
tests/: test_ab_thinking.py  test_agent_loop.py  test_agent_loop_tasks.py  test_arena.py  test_auditor.py  test_backends.py  test_cli.py  test_compare.py  test_config_secrets.py  test_console.py  test_datasets.py  test_evaluation.py  test_loader.py  test_repo_patch.py  test_reporter.py  test_result_schema.py  test_run_discovery.py  test_run_resume.py  test_runner.py  test_runner_stream.py  test_scorer.py
