[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-benchmark"
version = "0.2.0"
description = "Automated benchmark suite for local LLMs — LM Studio, Ollama, llama.cpp"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "benchmark", "ollama", "lm-studio", "llama-cpp", "local-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
llm-bench = "benchmark.cli:main"

[project.urls]
Homepage = "https://github.com/ericrichardson/llm-benchmark"
Issues   = "https://github.com/ericrichardson/llm-benchmark/issues"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]
artifacts = ["tasks/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
