[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-benchmark"
version = "0.4.0"
description = "Automated benchmark suite for local LLMs — LM Studio, Ollama, llama.cpp, vLLM, and more"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "benchmark", "ollama", "lm-studio", "llama-cpp", "vllm", "tgi", "sglang", "tensorrt", "local-ai", "arena", "elo", "vision", "multimodal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
datasets = [
    "jinja2>=3.1",
    "datasets>=2.18",
]

[project.scripts]
llm-bench = "benchmark.cli:main"

[project.urls]
Homepage = "https://github.com/eric-rolph/llm-benchmark"
Issues   = "https://github.com/eric-rolph/llm-benchmark/issues"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]
artifacts = ["tasks/*.yaml"]

[tool.hatch.build.targets.wheel.force-include]
"run.py" = "run.py"
"tasks" = "tasks"

[tool.pytest.ini_options]
testpaths = ["tests"]
